--- a/Portfolio/core/templates/index.html
+++ b/Portfolio/core/templates/index.html
@@ -73,22 +73,22 @@
         <section class="page-section" id="skills">
             <div class="container">
                 <h2 class="text-center mt-0">Things I have used</h2>
-                <h5 class="text-center text-white-75 font-weight-light mb-5" style="color:black">( Ratings out of 10 )</h5>
+                <h5 class="text-center text-white-75 font-weight-light mb-5" style="color:black">( My personal ratings out of 10 )</h5>
                 <hr class="divider my-4" />
                 <div class="row">
-                        <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
-                            <img class="flip-image" src="https://i.imgur.com/asySM4L.png"  width="80px" height="80px" ></img>
-                            <p class="rate">7</p>
-                            <h3 class="h6 mb-2">Python</h3>
-                        </div>
-                        <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
-                            <img class="flip-image" src="https://i.imgur.com/jiWIM42.png"  width="80px" height="80px" ></img>
-                            <p class="rate">9</p>
-                            <h3 class="h6 mb-2">Javascript</h3>
-                        </div>
+                    <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
+                        <img class="flip-image" src="https://i.imgur.com/jiWIM42.png"  width="80px" height="80px" ></img>
+                        <p class="rate">9</p>
+                        <h3 class="h6 mb-2">Javascript</h3>
+                    </div>
+                    <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
+                        <img class="flip-image" src="https://i.imgur.com/asySM4L.png"  width="80px" height="80px" ></img>
+                        <p class="rate">7</p>
+                        <h3 class="h6 mb-2">Python</h3>
+                    </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/TfH1xvo.png"  width="80px" height="80px" ></img>
-                            <p class="rate">5</p>
+                            <p class="rate">4</p>
                             <h3 class="h6 mb-2">Java</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
@@ -98,7 +98,7 @@
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTfh0VmHkafOJ0l3uWTOlQen7rtCUWucOmm0w&usqp=CAU"  width="80px" height="80px" ></img>
-                            <p class="rate">10</p>
+                            <p class="rate">9</p>
                             <h3 class="h6 mb-2">Jquery</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
@@ -108,12 +108,12 @@
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/5Q5BhxP.png"  width="80px" height="80px" ></img>
-                            <p class="rate">10</p>
+                            <p class="rate">9</p>
                             <h3 class="h6 mb-2">Css</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://cdn.worldvectorlogo.com/logos/angular-icon.svg"  width="80px" height="80px" ></img>
-                            <p class="rate">7</p>
+                            <p class="rate">5</p>
                             <h3 class="h6 mb-2">Angular</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
@@ -123,7 +123,7 @@
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/rB9nqvD.png"  width="80px" height="80px" ></img>
-                            <p class="rate">8</p>
+                            <p class="rate">7</p>
                             <h3 class="h6 mb-2">React Native</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
@@ -133,12 +133,12 @@
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/EHnE1Qc.png"  width="80px" height="80px" ></img>
-                            <p class="rate">9</p>
+                            <p class="rate">8</p>
                             <h3 class="h6 mb-2">Django</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/qFQHrf8.png"  width="80px" height="80px" ></img>
-                            <p class="rate">6</p>
+                            <p class="rate">7</p>
                             <h3 class="h6 mb-2">Flask</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
@@ -153,7 +153,7 @@
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/16ezo9A.png"  width="80px" height="80px" ></img>
-                            <p class="rate">8</p>
+                            <p class="rate">7</p>
                             <h3 class="h6 mb-2">Jest</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
@@ -173,7 +173,7 @@
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/y23YJGp.png"  width="80px" height="80px" ></img>
-                            <p class="rate">10</p>
+                            <p class="rate">9</p>
                             <h3 class="h6 mb-2">Sqlite</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
@@ -199,51 +199,51 @@
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/0pC9qlp.png"  width="80px" height="80px" ></img>
                             <p class="rate">6</p>
-                            <h3 class="h6 mb-2">gCloud-SDK</h3>
+                            <h3 class="h6 mb-2">gCloud & nginx</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/5ym77hX.png"  width="80px" height="80px" ></img>
-                            <p class="rate">10</p>
+                            <p class="rate">9</p>
                             <h3 class="h6 mb-2">Gitbash</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/V4G3mHW.png"  width="80px" height="80px" ></img>
-                            <p class="rate">9</p>
+                            <p class="rate">8</p>
                             <h3 class="h6 mb-2">Circleci</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/DebnlRF.png"  width="80px" height="80px" ></img>
-                            <p class="rate">10</p>
+                            <p class="rate">9</p>
                             <h3 class="h6 mb-2">Postman</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/xgA8wZV.png"  width="80px" height="80px" ></img>
-                            <p class="rate">10</p>
+                            <p class="rate">9</p>
                             <h3 class="h6 mb-2">VSCode</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/Fa99T1d.png"  width="80px" height="80px" ></img>
-                            <p class="rate">6</p>
+                            <p class="rate">5</p>
                             <h3 class="h6 mb-2">Android-Studio</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/gsWangB.png"  width="80px" height="80px" ></img>
-                            <p class="rate">10</p>
+                            <p class="rate">8</p>
                             <h3 class="h6 mb-2">3D-Paint</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://i.imgur.com/NUloDu6.png"  width="80px" height="80px" ></img>
-                            <p class="rate">10</p>
+                            <p class="rate">6</p>
                             <h3 class="h6 mb-2">Photoshop</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://miro.medium.com/max/320/0*_rAD9NgK7l6KSlNc.png"  width="80px" height="80px" ></img>
-                            <p class="rate">9</p>
+                            <p class="rate">7</p>
                             <h3 class="h6 mb-2">Bootstrap</h3>
                         </div>
                         <div class="mt-5" style="margin:30px; display:flex; flex-flow:column; align-items:center;">
                             <img class="flip-image" src="https://cdn.iconscout.com/icon/free/png-512/stripe-2-498440.png"  width="80px" height="80px" ></img>
-                            <p class="rate">6</p>
+                            <p class="rate">5</p>
                             <h3 class="h6 mb-2">Stripe</h3>
                         </div>
                 </div>
@@ -270,17 +270,18 @@
                         <a href="#home" style="margin-left: 3vw;"> Deployed Link <img src="https://cdn.icon-icons.com/icons2/1875/PNG/512/deploy_120090.png" width="30px" height="30px"></img></a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="https://legacy-hotels2.herokuapp.com/" target="_blank">
-                            <img class="img-fluid" src="https://i.imgur.com/wHEr6wo.png" alt="" />
+                        <a class="portfolio-box" href="https://twittrer2.web.app/" target="_blank">
+                            <img class="img-fluid" src="https://imgur.com/HHTv7ol" alt="" />
                             <div class="portfolio-box-caption p-3">
-                                <div class="project-name" style="color:white;font-weight: bolder;">Google Map Inside Web</div>
-                                <div class="project-name" style="color:white">React Map</div>
-                                <div class="project-name" style="color:white">Google Map API</div>
-                                <div class="project-name" style="color:white">Hotel API</div>
+                                <div class="project-name" style="color:white;font-weight: bolder;">Twitter Replica</div>
+                                <div class="project-name" style="color:white">Frontend: React - Redux</div>
+                                <div class="project-name" style="color:white">Backend: Flask</div>
+                                <div class="project-name" style="color:white">Database: MongoDB - Atlas</div>
+                                <div class="project-name" style="color:white">Deploy: Heruko + Docker</div>
                             </div>
                         </a>
-                        <a href="https://github.com/Hamdalla2/GreenFieldLegacy" target="_blank" style="margin-left: 5vw;"><img src="https://icon-library.com/images/github-icon-svg/github-icon-svg-13.jpg" width="30px" height="30px"></img> Github Link </a>
-                        <a href="https://legacy-hotels2.herokuapp.com/" target="_blank" style="margin-left: 3vw;"> Deployed Link <img src="https://cdn.icon-icons.com/icons2/1875/PNG/512/deploy_120090.png" width="30px" height="30px"></img></a>
+                        <a href="https://github.com/Twittrer/TwitterRepo" target="_blank" style="margin-left: 5vw;"><img src="https://icon-library.com/images/github-icon-svg/github-icon-svg-13.jpg" width="30px" height="30px"></img> Github Link </a>
+                        <a href="https://twittrer2.web.app/" target="_blank" style="margin-left: 3vw;"> Deployed Link <img src="https://cdn.icon-icons.com/icons2/1875/PNG/512/deploy_120090.png" width="30px" height="30px"></img></a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
                         <a class="portfolio-box" href="https://legacy-hotels2.herokuapp.com/" target="_blank">
@@ -288,7 +289,7 @@
                             <div class="portfolio-box-caption p-3">
                                 <div class="project-name" style="color:white;font-weight: bolder;">Hotel Finder Website</div>
                                 <div class="project-name" style="color:white">Frontend: React + Redux + Persist</div>
-                                <div class="project-name" style="color:white">Backend: Nodejs + Express</div>
+                                <div class="project-name" style="color:white">Backend: Express + GoogleMap + API</div>
                                 <div class="project-name" style="color:white">Database: MongoDB - Atlas</div>
                                 <div class="project-name" style="color:white">Deploy: Heroku</div>
                             </div>
